2004-04-18  Stephen J. Turnbull  <stephen@xemacs.org>

	* emacs.c (main_1): dumped_data_max_size and dumped_data_align_offset
	return size_t, so need %u format conversion.

2004-04-18  Stephen J. Turnbull  <stephen@xemacs.org>

	* Makefile.in.in ($(LISP)/finder-inf.el): Force removal.

2004-02-22  Stephen J. Turnbull  <stephen@xemacs.org>

	* console.c (function_key_map): Reference `key-binding'.

	* keymap.c (Vkey_translation_map): Improve docstring.

2004-04-18  Olivier Galibert  <galibert@pobox.com>

	* emacs.c (main_1): Fix stupid logic error in -si handling.

2004-04-15  Jerry James  <james@xemacs.org>

	* number.c (Foddp): Lisp name should be oddp, not odd.  Thanks to
	Olivier Galibert.

2003-12-07  Olivier Galibert  <galibert@pobox.com>

	* Makefile.in.in: Add in-executable dump file support.

	* dump-data.h (dumped_data_get): Added.

	* dump-data.c: Added.

	* emacs.c (main_1): Add support for -si.

	* dumper.c (pdump_ram_try): Added.  Tries getting the dump file
	from within the executable itself.
	(pdump_load): Call pdump_ram_try.

2004-04-15  Jerry James  <james@xemacs.org>

	* data.c (Fstring_to_number): Skip leading '-' when finding the
	end of a number.

2004-04-14  Jerry James  <james@xemacs.org>

	* data.c (Fstring_to_number): Work around limitations of GMP
	string to number converting functions.
	* lread.c (read_atom): Comment fix: the behavior is not random.
	* number.c (string_to_bignum): Ditto.

2004-04-13  Jerry James  <james@xemacs.org>

	* data.c (Fstring_to_number): Skip leading + sign to avoid
	triggering random GMP behavior.
	* lread.c (read_atom): Ditto.
	* lread.c (isratio_string): Recognize ratio with leading + sign.
	* number.c (string_to_bignum): Skip leading + sign.

2004-01-30  Glynn Clements  <glynn.clements@virgin.net>

	* device-x.c (x_error_handler): Don't call stderr_out

2004-04-08  Jerry James  <james@xemacs.org>

	* data.c: Use #ifndef for functions unused with new number types.